--- a/Qms_v3/templates/report/Fame.html
+++ b/Qms_v3/templates/report/Fame.html
@@ -640,15 +640,15 @@
 
 {% block scripts %}
 <script type="text/javascript">
-    var cr_1 = parseInt($('#cr_1').html());
-    var cr_2 = parseInt($('#cr_2').html());
-    var cr_3 = parseInt($('#cr_3').html());
-    var cr_4 = parseInt($('#cr_4').html());
-    var cr_5 = parseInt($('#cr_5').html());
-    var cr_6 = parseInt($('#cr_6').html());
-    var cr_7 = parseInt($('#cr_7').html());
-    var cr_8 = parseInt($('#cr_8').html());
-    var cr_9 = parseInt($('#cr_9').html());
+    var cr_1 = $('#cr_1').html();
+    var cr_2 = $('#cr_2').html();
+    var cr_3 = $('#cr_3').html();
+    var cr_4 = $('#cr_4').html();
+    var cr_5 = $('#cr_5').html();
+    var cr_6 = $('#cr_6').html();
+    var cr_7 = $('#cr_7').html();
+    var cr_8 = $('#cr_8').html();
+    var cr_9 = $('#cr_9').html();
     if (cr_1 == 'NA') {
         cr_1 = 1;
     }
@@ -676,14 +676,14 @@
     if (cr_9 == 'NA') {
         cr_9 = 1;
     }
-    $('#cr_score').html((cr_1+cr_2+cr_3+cr_4+cr_5+cr_6+cr_7+cr_8+cr_9)*4 + '%');
-    var cir_1 = parseInt($('#cir_1').html());
-    var cir_2 = parseInt($('#cir_2').html());
-    var cir_3 = parseInt($('#cir_3').html());
-    var cir_4 = parseInt($('#cir_4').html());
-    var cir_5 = parseInt($('#cir_5').html());
-    var cir_6 = parseInt($('#cir_6').html());
-    var cir_7 = parseInt($('#cir_7').html());
+    $('#cr_score').html((parseInt(cr_1)+parseInt(cr_2)+parseInt(cr_3)+parseInt(cr_4)+parseInt(cr_5)+parseInt(cr_6)+parseInt(cr_7)+parseInt(cr_8)+parseInt(cr_9))*4 + '%');
+    var cir_1 = ($('#cir_1').html());
+    var cir_2 = ($('#cir_2').html());
+    var cir_3 = ($('#cir_3').html());
+    var cir_4 = ($('#cir_4').html());
+    var cir_5 = ($('#cir_5').html());
+    var cir_6 = ($('#cir_6').html());
+    var cir_7 = ($('#cir_7').html());
     if (cir_1 == 'NA') {
         cir_1 = 1;
     }
@@ -705,12 +705,12 @@
     if (cir_7 == 'NA') {
         cir_7 = 1;
     }
-    $('#cir_score').html((cir_1+cir_2+cir_3+cir_4+cir_5+cir_6+cir_7)*4 + '%');
-    var ss_1 = parseInt($('#ss_1').html());
-    var ss_2 = parseInt($('#ss_2').html());
-    var ss_3 = parseInt($('#ss_3').html());
-    var ss_4 = parseInt($('#ss_4').html());
-    var ss_5 = parseInt($('#ss_5').html());
+    $('#cir_score').html((parseInt(cir_1)+parseInt(cir_2)+parseInt(cir_3)+parseInt(cir_4)+parseInt(cir_5)+parseInt(cir_6)+parseInt(cir_7))*4 + '%');
+    var ss_1 = ($('#ss_1').html());
+    var ss_2 = ($('#ss_2').html());
+    var ss_3 = ($('#ss_3').html());
+    var ss_4 = ($('#ss_4').html());
+    var ss_5 = ($('#ss_5').html());
     if (ss_1 == 'NA') {
         ss_1 = 1;
     }
@@ -726,11 +726,11 @@
     if (ss_5 == 'NA') {
         ss_5 = 1;
     }
-    $('#ss_score').html((ss_1+ss_2+ss_3+ss_4+ss_5)*4 + '%');
-    var doc_1 = parseInt($('#doc_1').html());
-    var doc_2 = parseInt($('#doc_2').html());
-    var doc_3 = parseInt($('#doc_3').html());
-    var doc_4 = parseInt($('#doc_4').html());
+    $('#ss_score').html((parseInt(ss_1)+parseInt(ss_2)+parseInt(ss_3)+parseInt(ss_4)+parseInt(ss_5))*4 + '%');
+    var doc_1 = ($('#doc_1').html());
+    var doc_2 = ($('#doc_2').html());
+    var doc_3 = ($('#doc_3').html());
+    var doc_4 = ($('#doc_4').html());
     if (doc_1 == 'NA') {
         doc_1 = 1;
     }
@@ -743,6 +743,6 @@
     if (doc_4 == 'NA') {
         doc_4 = 1;
     }
-    $('#doc_score').html((doc_1+doc_2+doc_3+doc_4)*4 + '%');
+    $('#doc_score').html((parseInt(doc_1)+parseInt(doc_2)+parseInt(doc_3)+parseInt(doc_4))*4 + '%');
 </script>
 {% endblock %}
