--- a/Qms_v3/templates/form/Abhindalco.html
+++ b/Qms_v3/templates/form/Abhindalco.html
@@ -29,13 +29,21 @@
                                 <label for="empid">Employee ID</label>
                                 <input type="number" class="form-control" id="empid" name="empid" readonly value="{{profile.emp_id}}">
                             </div>
-                            <div class="col-md-3 form-group">
+                            <div class="col-md-2 form-group">
                                 <label for="zone">Zone</label>
                                 <input type="text" class="form-control" id="zone" name="zone" required>
                             </div>
-                            <div class="col-md-3 form-group">
+                            <div class="col-md-2 form-group">
                                 <label for="concept">Concept</label>
                                 <input type="text" class="form-control" id="concept" name="concept" required>
+                            </div>
+                            <div class="col-md-2 form-group">
+                                <label for="type">Type</label>
+                                <select class="form-control" id="type" name="type" required>
+                                    <option value="" selected disabled>-- Please Select --</option>
+                                    <option value="Inbound">Inbound</option>
+                                    <option value="Outbound">Outbound</option>
+                                </select>
                             </div>
                         </div>
                         <div class="row">
