--- a/Qms_v3/templates/agent_dashboard.html
+++ b/Qms_v3/templates/agent_dashboard.html
@@ -3,7 +3,16 @@
 {% block main %}
         <!-- page content -->
         <div class="right_col" role="main">
-          <div class="row mb-3">
+          <div class="row mb-3 pt-3 pb-3 border">
+            <div class="col-md-12 pb-2">
+              <h4>Overall:
+                    {% if overall_average ==  "No Audits This Month" %}
+                    {{overall_average}}
+                    {% else %}
+                    {{overall_average|floatformat:2}}%
+                    {% endif %}
+              </h4>
+            </div>
             <div class="col-md-2">
               <div class="card-base">
                 <div class="card-icon">
@@ -14,23 +23,6 @@
                     <h2 class="box-title mt-5" style="color: #2A3F54;">All Audits</h2>
                     <h1>{{all_total}}</h1>
                     <a href="/emp-report/all" class="anchor btn btn-default" style="background: #1ABB9C; color: #fff;">
-                      View
-                    </a>
-                  </div>
-                </div>
-                <div class="space"></div>
-              </div>
-            </div>
-            <div class="col-md-2">
-              <div class="card-base">
-                <div class="card-icon">
-                  <span class="imagecard widgetCardIcon">
-                    <i class="fa fa-calendar"></i>
-                  </span>
-                  <div class="card-data widgetCardData">
-                    <h2 class="box-title mt-5" style="color: #2A3F54;">This Month's Audits</h2>
-                    <h1>{{month_all_total}}</h1>
-                    <a href="/emp-report/month" class="anchor btn btn-default" style="background: #1ABB9C; color: #fff;">
                       View
                     </a>
                   </div>
@@ -76,14 +68,129 @@
               <div class="card-base">
                 <div class="card-icon">
                   <span class="imagecard widgetCardIcon">
+                    <i class="fa fa-lightbulb-o"></i>
+                  </span>
+                  <div class="card-data widgetCardData">
+                    <h2 class="box-title mt-5" style="color: #2A3F54;">Coaching Closure</h2>
+                    <br>
+                    {% if coaching_closure ==  "No Audits" %}
+                    <h5>{{coaching_closure}}</h5>
+                    {% else %}
+                    <h1>{{coaching_closure|floatformat:2}}%</h1>
+                    {% endif %}
+                  </div>
+                </div>
+                <div class="space"></div>
+              </div>
+            </div>
+            <div class="col-md-2">
+              <div class="card-base">
+                <div class="card-icon">
+                  <span class="imagecard widgetCardIcon">
+                    <i class="fa fa-exclamation-triangle"></i>
+                  </span>
+                  <div class="card-data widgetCardData">
+                    <h2 class="box-title mt-5" style="color: #2A3F54;">All Fatals</h2>
+                    <br>
+                    <h1>{{overall_fatal_count}}</h1>
+                  </div>
+                </div>
+                <div class="space"></div>
+              </div>
+            </div>
+            <div class="col-md-2">
+              <div class="card-base">
+                <div class="card-icon">
+                  <span class="imagecard widgetCardIcon">
                     <i class="fa fa-exclamation-circle"></i>
                   </span>
                   <div class="card-data widgetCardData">
-                    <h2 class="box-title mt-5" style="color: #2A3F54;">This Month's Fatal Audits</h2>
-                    <h1>{{fatal_total}}</h1>
+                    <h2 class="box-title mt-5" style="color: #2A3F54;">All Fatal Audits</h2>
+                    <h1>{{overall_fatal_audit_count}}</h1>
                     <a href="/emp-report/fatal" class="anchor btn btn-default" style="background: #1ABB9C; color: #fff;">
                       View
                     </a>
+                  </div>
+                </div>
+                <div class="space"></div>
+              </div>
+            </div>
+          </div>
+          <div class="row mb-3 pt-3 pb-3 border">
+            <div class="col-md-12 pb-2 pt-2 mb-2 bg-white" >
+              <h2 class="box-title" style="color: #2A3F54; font-weight: 600;">This Month's:
+                    {% if average ==  "No Audits This Month" %}
+                    {{average}}
+                    {% else %}
+                    {{average|floatformat:2}}%
+                    {% endif %}
+              </h2>
+            </div>
+            <div class="col-md-2">
+              <div class="card-base">
+                <div class="card-icon">
+                  <span class="imagecard widgetCardIcon">
+                    <i class="fa fa-calendar"></i>
+                  </span>
+                  <div class="card-data widgetCardData">
+                    <h2 class="box-title mt-5" style="color: #2A3F54;">This Month's Audits</h2>
+                    <h1>{{month_all_total}}</h1>
+                    <a href="/emp-report/month" class="anchor btn btn-default" style="background: #1ABB9C; color: #fff;">
+                      View
+                    </a>
+                  </div>
+                </div>
+                <div class="space"></div>
+              </div>
+            </div>
+            <div class="col-md-2">
+              <div class="card-base">
+                <div class="card-icon">
+                  <span class="imagecard widgetCardIcon">
+                    <i class="fa fa-pencil"></i>
+                  </span>
+                  <div class="card-data widgetCardData">
+                    <h2 class="box-title mt-5" style="color: #2A3F54;">Open Audits</h2>
+                    <h1>{{month_open_total}}</h1>
+                    <a href="/emp-report/open" class="anchor btn btn-default" style="background: #1ABB9C; color: #fff;">
+                      View
+                    </a>
+                  </div>
+                </div>
+                <div class="space"></div>
+              </div>
+            </div>
+            <div class="col-md-2">
+              <div class="card-base">
+                <div class="card-icon">
+                  <span class="imagecard widgetCardIcon">
+                    <i class="fa fa-times"></i>
+                  </span>
+                  <div class="card-data widgetCardData">
+                    <h2 class="box-title mt-5" style="color: #2A3F54;">Dispute Audits</h2>
+                    <h1>{{month_dispute_total}}</h1>
+                    <a href="/emp-report/dispute" class="anchor btn btn-default" style="background: #1ABB9C; color: #fff;">
+                      View
+                    </a>
+                  </div>
+                </div>
+                <div class="space"></div>
+              </div>
+            </div>
+            <div class="col-md-2">
+              <div class="card-base">
+                <div class="card-icon">
+                  <span class="imagecard widgetCardIcon">
+                    <i class="fa fa-lightbulb-o"></i>
+                  </span>
+                  <div class="card-data widgetCardData">
+                    <h2 class="box-title mt-5" style="color: #2A3F54;">Coaching Closure</h2>
+                    <br>
+                    {% if month_coaching_closure ==  "No Audits" %}
+                    <h5>{{month_coaching_closure}}</h5>
+                    {% else %}
+                    <h1>{{month_coaching_closure|floatformat:2}}%</h1>
+                    {% endif %}
                   </div>
                 </div>
                 <div class="space"></div>
@@ -104,46 +211,26 @@
                 <div class="space"></div>
               </div>
             </div>
+            <div class="col-md-2">
+              <div class="card-base">
+                <div class="card-icon">
+                  <span class="imagecard widgetCardIcon">
+                    <i class="fa fa-exclamation-circle"></i>
+                  </span>
+                  <div class="card-data widgetCardData">
+                    <h2 class="box-title mt-5" style="color: #2A3F54;">This Month's Fatal Audits</h2>
+                    <h1>{{fatal_total}}</h1>
+                    <a href="/emp-report/fatal" class="anchor btn btn-default" style="background: #1ABB9C; color: #fff;">
+                      View
+                    </a>
+                  </div>
+                </div>
+                <div class="space"></div>
+              </div>
+            </div>
           </div>
           <div class="row">
-            <div class="col-md-2">
-              <div class="card-base">
-                <div class="card-icon">
-                  <span class="imagecard widgetCardIcon">
-                    <i class="fa fa-tasks"></i>
-                  </span>
-                  <div class="card-data widgetCardData">
-                    <h2 class="box-title mt-5" style="color: #2A3F54;">This Month's Score</h2>
-                    <br>
-                    {% if average ==  "No Audits This Month" %}
-                    <h5>{{average}}</h5>
-                    {% else %}
-                    <h1>{{average|floatformat:2}}%</h1>
-                    {% endif %}
-                  </div>
-                </div>
-                <div class="space"></div>
-              </div>
-            </div>
-            <div class="col-md-2">
-              <div class="card-base">
-                <div class="card-icon">
-                  <span class="imagecard widgetCardIcon">
-                    <i class="fa fa-lightbulb-o"></i>
-                  </span>
-                  <div class="card-data widgetCardData">
-                    <h2 class="box-title mt-5" style="color: #2A3F54;">Coaching Closure</h2>
-                    <br>
-                    {% if coaching_closure ==  "No Audits" %}
-                    <h5>{{coaching_closure}}</h5>
-                    {% else %}
-                    <h1>{{coaching_closure|floatformat:2}}%</h1>
-                    {% endif %}
-                  </div>
-                </div>
-                <div class="space"></div>
-              </div>
-            </div>
+
             <div class="col-md-4">
               <div class="card">
                 <div class="card-header">
