--- a/Qms_v3/templates/change-password.html
+++ b/Qms_v3/templates/change-password.html
@@ -3,7 +3,7 @@
 <head>
     {% load static %}
     <meta charset="UTF-8">
-    <title>Mapping</title>
+    <title>Change Password | QMS</title>
     <!-- Bootstrap CSS ----->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Bootstrap JS ----->
@@ -16,7 +16,7 @@
         <nav class="navbar navbar-expand-lg navbar-light bg-light" style="background: #fefefe !important;">
           <div class="container-fluid">
             {% if user.is_authenticated %}
-              <a href="/mapping/home"><img src="{% static 'assets/images/ecpl-logo-new.png' %}" alt="" style="width:300px"></a>
+              <a href="/logout"><img src="{% static 'assets/images/ecpl-logo-new.png' %}" alt="" style="width:300px"></a>
             {% endif %}
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
