--- a/Qms_v3/templates/form/Email.html
+++ b/Qms_v3/templates/form/Email.html
@@ -88,16 +88,6 @@
                                 <input type="text" class="form-control" id="am" name="am" readonly value="{{profile.emp_rm2}}">
                                 <input type="hidden" name="am_id" value="{{profile.emp_rm2_id}}">
                             </div>
-                            <div class="col-md-2 form-group">
-                                <label for="week">Week</label>
-                                <select class="form-control" name="week" id="week" required="">
-                                    <option value="week1">Week1</option>
-                                    <option value="week2">Week2</option>
-                                    <option value="week3">Week3</option>
-                                    <option value="week4">Week4</option>
-                                    <option value="week5">Week5</option>
-                                </select>
-                            </div>
                         </div>
                     </div>
 
@@ -352,15 +342,15 @@
                         <div class="row">
                             <div class="col-md-12">
                                 <h4>Areas of improvement</h4>
-                                <textarea name="areaimprovement" id="areaimp" cols="30" rows="5" class="form-control" required="" pattern="(/^[A-Za-z]+$/)"></textarea>
+                                <textarea name="areaimprovement" id="areaimp" cols="30" rows="5" class="form-control" required=""></textarea>
                             </div>
                             <div class="col-md-12 mt-2">
                                 <h4>Positives</h4>
-                                <textarea name="positives" id="positives" cols="30" rows="5" class="form-control" required="" pattern="(/^[A-Za-z]+$/)"></textarea>
+                                <textarea name="positives" id="positives" cols="30" rows="5" class="form-control" required=""></textarea>
                             </div>
                             <div class="col-md-12 mt-2">
                                 <h4>Comments</h4>
-                                <textarea name="comments" id="cfeedback" cols="30" rows="5" class="form-control" required="" pattern="(/^[A-Za-z]+$/)"></textarea>
+                                <textarea name="comments" id="cfeedback" cols="30" rows="5" class="form-control" required=""></textarea>
                             </div>
                             <div class="col-md-12 mt-5" align="center">
                                 <button type="button" class="btn btn-lg btn-info" onclick="full_score(this)" data-toggle="modal" data-target="#viewscore">View Score</button>
@@ -411,6 +401,11 @@
     var score1;
     var score2;
     var score3;
+    var fatal1;
+    var fatal2;
+    var fatal3;
+    var fatal4;
+    var fatal5;
 
     function ce(e) {
         n=n+1;
@@ -466,6 +461,11 @@
         var compliance_3 = parseInt(document.querySelector('input[name="compliance_3"]:checked').value);
         var compliance_4 = parseInt(document.querySelector('input[name="compliance_4"]:checked').value);
         var compliance_5 = parseInt(document.querySelector('input[name="compliance_5"]:checked').value);
+        fatal1 = compliance_1;
+        fatal2 = compliance_2;
+        fatal3 = compliance_3;
+        fatal4 = compliance_4;
+        fatal5 = compliance_5;
         for (var i = 0; i <= n; i++) {
             compliance_score.value = compliance_1+compliance_2+compliance_3+compliance_4+compliance_5;
             
@@ -483,14 +483,14 @@
     function full_score(e) {
         n=n+1;
         var fullscore = document.getElementById('myscore');
-        // if ((fatal2 == 0 ) || ( fatal1 == 0 ) || ( fatal3 == 0 ) || ( fatal4 == 0)){
-        //     fullscore.innerHTML = 0;
-        // }
-        // else {
+        if ((fatal2 == 0 ) || ( fatal1 == 0 ) || ( fatal3 == 0 ) || ( fatal4 == 0) || ( fatal5 == 0)){
+            fullscore.innerHTML = 0;
+        }
+        else {
             for (var i = 0; i <= n; i++) {
                 fullscore.innerHTML = score1+score2+score3;
             }
-        // }
+        }
     }
 
 </script>
